Color contrast fixed for navigation hyperlinks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,10 @@ nav {
     text-align: center;
 }
 
+.navbar-dark .navbar-nav .nav-link {
+	color: rgba(255,255,255);
+}
+
 /* FOOTER */
 
 footer {
